<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_sort_name_asc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_name_asc"/>
    <item
        android:id="@+id/action_sort_name_desc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_name_desc"/>
    <item
        android:id="@+id/action_sort_none"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_none"/>
    
    <item 
        android:id="@+id/action_debug_dump_db"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_debug_dump_db"/>

</menu>